added tailwind config file, and postcss config file, testing styling on rachel laquea inc heading tag to troubleshoot styling not being applied

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "autoprefixer": "^9.8.8",
     "bootstrap": "^5.2.3",
     "develop": "^1.0.0",
+    "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
