--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.8.8",
     "bootstrap": "^5.2.3",
     "develop": "^1.0.0",
+    "dotenv": "^6.2.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
