--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "develop": "^1.0.0",
     "dotenv": "^6.2.0",
+    "jquery": "^3.7.1",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
